--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -2,10 +2,10 @@
 autoinstall:
     version: 1
     identity:
-        realname: 'Alex de Oliveira Souza'
+        realname: 'Alex'
         hostname: ubuntu-desktop
         username: alex
-        password: '$y$j9T$0Gtf.Niux8QnOLWR6OF0x0$hZF9qs7i28wwvArepmvp/0IG26OyhnR/s1wde6raFRB'
+        password: '$y$j9T$WAkjWJcHJb4xDw9b4ql0D/$/nicuSz0x1jE3/z0k/ZfO7Bi0DMQhnL0oxeMP3.RWP8'
     locale: pt_BR.utf8
     keyboard:
         layout: br
@@ -14,11 +14,11 @@ autoinstall:
         - libreoffice
         - gimp
         - git
-        - htop
-        - btop
         - wget
-        -flatpak
-        -ubuntu-restricted-extras
+    snaps:
+        - name: spotify
+          channel: stable
+          classic: false
     codecs:
         install: true
     drivers:
