--- a/autoinstall.yaml
+++ b/autoinstall.yaml
@@ -18,6 +18,7 @@ autoinstall:
     - curl
     - git
     - flatpak
+    - ubuntu-restricted-extras
   snaps:
     - name: spotify
       channel: stable
@@ -26,14 +27,4 @@ autoinstall:
   drivers:
     install: true
   updates: all
-  late-commands:
-    - "apt update && apt upgrade -y && apt dist-upgrade -y"
-    - "add-apt-repository -y ppa:flatpak/stable"
-    - "apt update"
-    - "apt install -y flatpak gnome-software-plugin-flatpak"
-    - "flatpak remote-add --if-not-exists flathub \
-      https://dl.flathub.org/repo/flathub.flatpakrepo"
-    - "apt install -y ubuntu-desktop"
-    - "apt install -y ubuntu-restricted-extras"
-    - "reboot"
   shutdown: reboot
